# subspace-chain-alerts

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
alerter/: Cargo.toml  networks.toml
alerter/src/: block_importer.rs  blocks.rs  cli.rs  error.rs  event_types.rs  events.rs  main.rs  md_format.rs  p2p_network.rs  slack.rs  slots.rs  stall_and_reorg.rs  subspace.rs  uptime.rs
chain-alerter/: Cargo.toml
chain-alerter/src/: alerts.rs  chain_fork_monitor.rs  farming_monitor.rs  format.rs  main.rs  slack.rs  slot_time_monitor.rs  subspace.rs
chain-alerter/src/alerts/: account.rs  subscan.rs  tests.rs  transfer.rs
chain-alerter/src/farming_monitor/: tests.rs
chain-alerter/src/slot_time_monitor/: mod.rs  test_utils.rs  utils.rs
chain-alerter/src/subspace/: artifacts.rs  decode.rs  test_utils.rs  tests.rs
chain-filter/: Cargo.toml
docker/: .dockerignore  alerter.Dockerfile  chain-alerter.Dockerfile
scripts/: bump-versions.sh  check-startup.sh  find-unused-deps.sh
slack-alerts/: Cargo.toml
