[workspace.package]
edition = "2024"

[workspace]
resolver = "2"
members = [
    "alerter",
]

[workspace.dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
subxt = { version = "0.44.0", default-features = false }
subxt-core = "0.44.0"
thiserror = "2.0.17"
tokio = "1.48.0"
clap = "4.5.48"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false }
serde = "1.0.228"
humantime = "2.3.0"
subxt-rpcs = "0.44.0"
sp-blockchain = "42.0.0"
sp-runtime = "44.0.0"
futures-util = "0.3.31"
rust_decimal = "1.39.0"
toml = "0.9.8"
scale-decode = "0.16.0"
scale-decode-derive = "0.16.0"
hex = "0.4.3"
slack-morphism = "2.16.0"
zeroize = "1.8.2"
urlencoding = "2.1.3"
