[workspace.package]
edition = "2024"
authors = ["Subspace Labs <https://subspace.network>"]
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace-chain-alerts"

[workspace]
resolver = "2"
members = [
    "alerter",
]

[workspace.dependencies]
clap = "4.5.48"
env_logger = "0.11.8"
futures-util = "0.3.31"
hex = "0.4.3"
humantime = "2.3.0"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false }
rust_decimal = "1.39.0"
scale-decode = "0.16.0"
scale-decode-derive = "0.16.0"
serde = "1.0.228"
slack-morphism = "2.16.0"
sp-blockchain = "42.0.0"
sp-runtime = "44.0.0"
subxt = { version = "0.44.0", default-features = false }
subxt-core = "0.44.0"
subxt-rpcs = "0.44.0"
thiserror = "2.0.17"
tokio = "1.48.0"
toml = "0.9.8"
urlencoding = "2.1.3"
zeroize = "1.8.2"

[profile.release]
# keep full debug info in the binary, performance is less important than good error messages
debug = "full"
debug-assertions = true
overflow-checks = true

[profile.production]
inherits = "release"
lto = "fat"
