[package]
name = "alerter"
version = "1.0.0"
edition.workspace = true

[dependencies]
chrono.workspace = true
env_logger.workspace = true
subxt = { workspace = true, features = ["native", "jsonrpsee", "reconnecting-rpc-client"] }
subxt-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
log.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
humantime.workspace = true
subxt-rpcs.workspace = true
sp-blockchain.workspace = true
sp-runtime.workspace = true
futures-util.workspace = true
rust_decimal.workspace = true
toml.workspace = true
scale-decode-derive.workspace = true
scale-decode.workspace = true
hex.workspace = true
slack-morphism = { workspace = true, features = ["hyper"] }
zeroize.workspace = true
urlencoding.workspace = true