[package]
name = "subspace-chain-alerter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
humantime.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
reqwest = { workspace = true, features = ["http2", "rustls-tls", "charset"] }
rustls.workspace = true
scale-value.workspace = true
serde_json.workspace = true
subspace-process.workspace = true
subxt = { workspace = true, features = ["jsonrpsee", "native"] }
tokio = { workspace = true, features = ["macros", "parking_lot", "rt-multi-thread", "fs"] }
tracing.workspace = true
slack-morphism = { workspace = true, features = ["hyper"] }
zeroize.workspace = true

[dev-dependencies]
hex-literal.workspace = true